# mt-rs

./: CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASE-NOTES-0.4.0.md
.github/workflows/: ci.yml  publish.yml
docs/design/: index.md
docs/design/02-under-review/: 0002-music-theory-correctness-audit-report.md  0003-tier-2-music-theory-enhancements-design-spec.md  0004-tier-3-advanced-music-theory-design-spec.md
docs/plans/: 2025-12-20-midi-export-design.md  2025-12-20-midi-export-implementation.md  2025-12-20-midi-playback-design.md  2025-12-20-midi-playback-implementation.md  2025-12-21-midi-extensions-design.md  2025-12-21-midi-extensions-implementation.md
examples/: hypnotic_techno.rs  midi_cc_demo.rs  nocturne.rs  nocturne_duo.rs  simple_midi_test.rs  synth_chords.rs  techno_bass.rs
mt/: Cargo.toml
mt-cli/: Cargo.toml
mt-cli/src/: cli.rs  main.rs
mt-cli/tests/: cli_tests.rs
mt/src/: lib.rs
mt/src/analysis/: mod.rs
mt/src/chord/: mod.rs  number.rs  quality.rs
mt/src/harmony/: compatibility.rs  diatonic.rs  mod.rs
mt/src/scale/: mode.rs  scale_type.rs
mt/src/set_class/: mod.rs
mt/src/voice_leading/: mod.rs
mt/tests/: coverage.rs
mt/tests/analysis/: test_roman.rs  test_secondary.rs
mt/tests/chord/: test_chord.rs  test_enharmonics.rs  test_identify.rs  test_number.rs  test_regex.rs
mt/tests/counterpoint/: test_counterpoint.rs
mt/tests/figured_bass/: test_figured_bass.rs
mt/tests/harmony/: test_common_tones.rs  test_compatibility.rs  test_diatonic.rs  test_pivot.rs
mt/tests/interval/: test_between.rs  test_compound.rs  test_interval.rs
mt/tests/neo_riemannian/: test_nr.rs
mt/tests/note/: test_enharmonic.rs  test_key_signature.rs  test_note.rs  test_notes_trait.rs  test_pitch.rs  test_pitch_symbol.rs
mt/tests/scale/: test_additional_scales.rs  test_exotic_scales.rs  test_identify.rs  test_regex.rs  test_scale.rs
mt/tests/set_class/: test_set_class.rs
mt/tests/voice_leading/: mod.rs  test_voice_leading.rs
src/: cli.rs  lib.rs  main.rs  scale.rs
src/analysis/: mod.rs  roman.rs  secondary.rs
src/chord/: chord.rs  errors.rs  number.rs  quality.rs
src/counterpoint/: mod.rs
src/figured_bass/: mod.rs
src/harmony/: common_tones.rs  diatonic.rs  mod.rs  pivot.rs
src/interval/: errors.rs  interval.rs  mod.rs
src/midi/: builder.rs  duration.rs  event.rs  export.rs  file.rs  mod.rs  playback.rs  types.rs
src/neo_riemannian/: mod.rs
src/note/: errors.rs  key_signature.rs  mod.rs  note.rs  pitch.rs  pitch_symbol.rs
src/scale/: errors.rs  mod.rs  mode.rs  scale.rs  scale_type.rs
src/set_class/: forte.rs  mod.rs
src/voice_leading/: mod.rs
tests/: coverage.rs  midi_integration.rs  midi_playback_integration.rs  tests.rs
tests/analysis/: mod.rs  test_roman.rs  test_secondary.rs
tests/chord/: test_chord.rs  test_enharmonics.rs  test_identify.rs  test_quality.rs  test_regex.rs
tests/counterpoint/: mod.rs  test_counterpoint.rs
tests/figured_bass/: mod.rs  test_figured_bass.rs
tests/harmony/: mod.rs  test_common_tones.rs  test_compatibility.rs  test_diatonic.rs  test_pivot.rs
tests/interval/: test_between.rs  test_compound.rs  test_interval.rs
tests/neo_riemannian/: mod.rs  test_nr.rs
tests/note/: test_enharmonic.rs  test_key_signature.rs  test_note.rs  test_notes_trait.rs  test_pitch.rs  test_pitch_symbol.rs
tests/scale/: test_additional_scales.rs  test_exotic_scales.rs  test_identify.rs  test_regex.rs  test_scale.rs
tests/set_class/: mod.rs  test_set_class.rs
tests/voice_leading/: test_voice_leading.rs
(+11 files in other folders)
