[package]
name = "rust-music-theory"
description = "A library that procedurally implements music theory notions like Scale, Chord, Interval, Note"
license = "MIT"
version = "0.3.0"
readme = "README.md"
repository = "https://github.com/ozankasikci/rust-music-theory"
authors = ["Ozan Kaşıkçı <ozan@kasikci.io>"]
edition = "2018"
exclude = [".gitignore"]
keywords = ["music", "music-theory"]

[features]
default = []
midi = ["dep:midly"]
midi-playback = ["midi", "dep:midir"]

[lib]
crate-type = ["rlib"]

[dependencies]
strum = "0.17.1"
strum_macros = "0.17.1"
regex = "1"
clap = "2.31"
lazy_static = "1.4.0"
midly = { version = "0.5", optional = true }
midir = { version = "0.9", optional = true }
