[package]
name = "rust-music-theory"
description = "A library that procedurally implements music theory notions like Scale, Chord, Interval, Note"
license = "MIT"
version = "0.3.0"
readme = "README.md"
repository = "https://github.com/ozankasikci/rust-music-theory"
authors = ["Ozan Kaşıkçı <ozan@kasikci.io>"]
edition = "2021"
exclude = [".gitignore"]
keywords = ["music", "music-theory"]

[features]
default = []
midi = []
serde = ["dep:serde"]

[lib]
crate-type = ["rlib"]

[dependencies]
strum = "0.26"
strum_macros = "0.26"
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
